--- a/style.css
+++ b/style.css
@@ -75,6 +75,11 @@ main .texto p{
   text-align: center;
 }
 
+main img{
+  width: 250px;
+  border-radius: 8%;
+}
+
 .titulo { 
   display: flex; 
   color: #454545;
@@ -154,7 +159,7 @@ main .texto p{
 
 
 
-@media (max-width: 690px){
+@media (max-width: 720px){
   .header{
     flex-direction: column;
   }
